[package]
name = "lsm_community"
version = "1.0.0"
authors = ["Songyao Wang <wangsong23@mails.tsinghua.edu.cn>"]
edition = "2021"

[dependencies]
bitvec = "1.0.1"
clap = { version = "4.4.2", features = ["derive"] }
derive_more = "0.99.17"
env_logger = "0.10.0"
fixedbitset = "0.4.2"
itertools = "0.11.0"
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
tempfile = "3.8.0"
crossbeam-channel = "0.5.8"
rayon = "1.5.0"
anyhow = "1"
crossbeam-skiplist = "0.1.3"
parking_lot = "0.12"
ouroboros = "0.18"
nom = "7.1.3"
byteorder = "1.5.0"
slotmap = {version = "0.4"}
num = "0.4.3"
dashmap = "6.1.0"
bytes = "1.8.0"
crc32fast = "1.4.2"
chrono = "0.4.38"
sled = "0.34"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
mio = "1.0.3"
time = "0.3.37"
crossbeam = "0.8.4"
num_cpus = "1.16.0"
moka = { version = "0.12.10", features = ["sync"] }
libc = "0.2.169"
farmhash = "1"
serde_json = "1.0.132"

[dev-dependencies]
assert_cmd = "2.0.12"
criterion = "0.5.1"

[profile.release-with-debug]
inherits = "release"
debug = true
